--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,14 @@
     <script defer src="/__/firebase/7.14.4/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-storage.js"></script>
 
-
-    <script defer src="/__/firebase/init.js"></script>
     
     <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="/__/firebase/init.js"></script>
+
+    <!--Load Favicon -->
+    <link rel="icon" href="favicon.png"/>
+    
+    <!--Load Fonts-->
     <link async defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
