append DOM with db data from snapshot

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
       </button>
     </div>
 
+    <h1 id = "testies"> testies </h1>
+    <div id = "theList"></div>
+
     <div id="map">
     </div>
 
