commented out map stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- update the version number as needed -->
+    
     <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/7.14.4/firebase-auth.js"></script>
@@ -45,14 +46,13 @@
     
     <div id = "theList"></div>
 
-    <div id="map">
-    </div>
-
+    <!--<div id="map">
+    </div>-->
 
     <!--JS-->
     <script src = "/app.js">
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcFvCdo_5DPAUfRdhVq8sttNxwLAhLpUI&callback=initMap"
-    async defer></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcFvCdo_5DPAUfRdhVq8sttNxwLAhLpUI&callback=initMap"
+    async defer></script>-->
   </body>
 </html>
