--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- update the version number as needed -->
+    <script src="https://js.stripe.com/v3/"></script>
     
     <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -39,6 +40,7 @@
         1. state: A unique unguessable value generated and saved on server for security purposes.
         2. Add a redirect URI in the platform settings here: https://dashboard.stripe.com/settings/applications
         3. Create a page that user gets redirected to where we say hey, you're all done, now finish creating your account! Or something like that.
+        4. "Save the Account ID" -- save the stripe_user_id parameter that will be returned to upon URI redirect. Save it to firestore
       
       -->
     </a>
