--- a/public/index.html
+++ b/public/index.html
@@ -32,24 +32,16 @@
   </head>
 
   <body>
-    <a href ="https://connect.stripe.com/oauth/authorize?client_id=ca_HLoTC6BH4yV6X5EFdsC9mrYkZTZLdZtG&state={STATE_VALUE}&scope=read_write&response_type=code&stripe_user[email]=user@example.com&stripe_user[url]=example.com">
+    <a onClick = "onboardBusiness()">
       Set up your physical business up on Cafe Infinite so that new customers can find and pay you on their phones!
-      <!--Customize banner: https://dashboard.stripe.com/settings/applications-->
-      <!--Page in Docs that helps create this link: https://stripe.com/docs/connect/enable-payment-acceptance-guide#step-21-add-an-authentication-buttonclient-side
-        On my to-do list here. Add:
-        1. state: A unique unguessable value generated and saved on server for security purposes.
-        2. Add a redirect URI in the platform settings here: https://dashboard.stripe.com/settings/applications
-        3. Create a page that user gets redirected to where we say hey, you're all done, now finish creating your account! Or something like that.
-        4. "Save the Account ID" -- save the stripe_user_id parameter that will be returned to upon URI redirect. Save it to firestore
-
-
-        // my test id // ca_HLoTC6BH4yV6X5EFdsC9mrYkZTZLdZtG
-        // my real id // ca_HLoT1oMFzVR7S0myFwkGwgDml51AcRxH
-        // test URL // https://connect.stripe.com/oauth/authorize?client_id=ca_HLoTC6BH4yV6X5EFdsC9mrYkZTZLdZtG&state={STATE_VALUE}&scope=read_write&response_type=code&stripe_user[email]=user@example.com&stripe_user[url]=example.com
-        // real URL // https://connect.stripe.com/oauth/authorize?client_id=ca_HLoT1oMFzVR7S0myFwkGwgDml51AcRxH&state={STATE_VALUE}&scope=read_write&response_type=code&stripe_user[email]=user@example.com&stripe_user[url]=example.com
-      -->
     </a>
     <a href = "stripe_return.html"> click here to go to page 2! </a>
+
+    <button id="banner-login" class = "top" onclick = "googleLogin()">
+      <span id = "fade-in"> login </span>
+    </button>
+
+    <script src = "/app.js">
     </script>
   </body>
 </html>
