used display property to make business-login button visibile plus added animation

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
     <!-- Business Login that appears after normal login -->
     <a id = "business-login" onClick = "onboardBusiness()">
-      Are you a business?
+      <span id = "fade-in"> Are you a business? </span>
     </a>
 
     <!-- Link to go to the business page
