--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <script defer src="/__/firebase/7.14.4/firebase-firestore.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-storage.js"></script>
+    <script defer src="/__/firebase/7.14.4/firebase-functions.js"></script>
 
     
     <!-- initialize the SDK after all desired features are loaded -->
