added an anonymous login method

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <!--Normal Login-->
-    <button id="banner-login" class = "top" onclick = "googleLogin()">
+    <button id="banner-login" class = "top" onclick = "anonLogin()">
       <span id = "fade-in"> loading... </span>
     </button>
 
