added live input form that updates database directly in biz.html

--- a/public/biz.html
+++ b/public/biz.html
@@ -46,7 +46,9 @@
         <span id = "fade-in"> Your Stripe ID is: loading... </span>
       </a>
 
-    <h1> Welcome back! Thanks for filling that stuff out. Welcome to your business page! </h1>
+    <input onchange = "updatePost(event)">
+
+    
 
     <a href = "index.html"> Go to back </a>
     <script src = "/bizPage.js">
