--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- update the version number as needed -->
-    <script src="http://js.stripe.com/v3/"></script><!--http address for testing, https for production-->
-    <!--<script src="http://js.stripe.com/v3/"></script>-->
+    <!--<script src="http://js.stripe.com/v3/"></script>http address for testing, https for production-->
+    <script src="https://js.stripe.com/v3/"></script>
     
     <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
