transitioned project to CSS grassroots

--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,47 @@
     <link async defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
-    <link href = "position.css" rel = "stylesheet" type = "text/css" />
-    <link href = "style.css" rel = "stylesheet" type = "text/css" />
+    <link href = "position1.css" rel = "stylesheet" type = "text/css" />
+    <link href = "style1.css" rel = "stylesheet" type = "text/css" />
     <link href = "animation.css" rel = "stylesheet" type = "text/css" />
   </head>
 
+
+
+
+
   <body>
-    <!--Normal Login-->
+
+    <div id="banner">
+
+      <button id="spacer" class = "top">
+        <span id id = "fade-in" = "fade-in"></span>
+      </button>
+
+        <button id="banner-left" class = "top">
+          <span id id = "fade-in" = "fade-in"> login/out </span>
+        </button>
+  
+      <button id="banner-middle" class = "top">
+        <span id id = "fade-in" = "fade-in"> Hey Elijah! </span>
+      </button>
+
+      <button id="banner-right" class = "top">
+        <span id id = "fade-in" = "fade-in"> Biz? </span>
+      </button>
+
+      <button id="spacer" class = "top">
+        <span id id = "fade-in" = "fade-in"></span>
+      </button>
+
+    </div>
+
+    <!--
     <button id="banner-login" class = "top" onclick = "anonLogin()">
+      <span id = "fade-in"> loading... </span>
+    </button>
+
+    <button id="banner-profile" class = "top" onclick = "anonLogin()">
       <span id = "fade-in"> loading... </span>
     </button>
 
@@ -43,16 +76,12 @@
       <span id = "fade-in"> Not you? Log Out </span>
     </button>
 
-    <!-- Business Login that appears after normal login -->
-    <a id = "business-login" onClick = "onboardBusiness()">
-      <span id = "fade-in"> Are you a business? </span>
+    <a id = "business-login" class = "top" onClick = "onboardBusiness()">
+      <span id = "fade-in"> Put your Biz in the Market </span>
     </a>
-
-    <!-- Link to go to the business page
-    <a href = "stripe_return.html"> click here to go to page 2! </a>
-    -->
 
     <script src = "/app.js">
     </script>
+        -->
   </body>
 </html>
