formatted banner and content quite simply

--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
         <span id id = "fade-in" = "fade-in"></span>
       </button>
 
-        <button id="banner-left" class = "top">
-          <span id id = "fade-in" = "fade-in"> login/out </span>
-        </button>
+      <button id="banner-left" class = "top">
+        <span id id = "fade-in" = "fade-in"> login/out </span>
+      </button>
   
       <button id="banner-middle" class = "top">
         <span id id = "fade-in" = "fade-in"> Hey Elijah! </span>
@@ -58,6 +58,28 @@
       </button>
 
       <button id="spacer" class = "top">
+        <span id id = "fade-in" = "fade-in"></span>
+      </button>
+
+    </div>
+
+
+
+    <div id="content">
+
+      <button id="content-spacer" class = "belly">
+        <span id id = "fade-in" = "fade-in"></span>
+      </button>
+
+      <button id="content-left" class = "belly">
+        <span id id = "fade-in" = "fade-in"> login/out </span>
+      </button>
+
+      <button id="content-right" class = "belly">
+        <span id id = "fade-in" = "fade-in"> Biz? </span>
+      </button>
+
+      <button id="content-spacer" class = "belly">
         <span id id = "fade-in" = "fade-in"></span>
       </button>
 
