--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- update the version number as needed -->
     <!--<script src="http://js.stripe.com/v3/"></script>http address for testing, https for production-->
+        <!--
     <script src="https://js.stripe.com/v3/"></script>
     
-    <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/7.14.4/firebase-auth.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-firestore.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-storage.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-functions.js"></script>
+    -->
+
+    <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
+  
 
     
     <!-- initialize the SDK after all desired features are loaded -->
@@ -42,24 +45,23 @@
     <div id="banner">
 
       <button id="spacer" class = "top">
-        <span id id = "fade-in" = "fade-in"></span>
       </button>
 
       <button id="banner-left" class = "top">
-        <span id id = "fade-in" = "fade-in"> login/out </span>
+        <span id = "fade-in"> login/out </span>
       </button>
   
       <button id="banner-middle" class = "top">
-        <span id id = "fade-in" = "fade-in"> Hey Elijah! </span>
+        <span id = "fade-in"> Hey Elijah! </span>
       </button>
 
       <button id="banner-right" class = "top">
-        <span id id = "fade-in" = "fade-in"> Biz? </span>
+        <span id = "fade-in"> Biz? </span>
       </button>
 
       <button id="spacer" class = "top">
-        <span id id = "fade-in" = "fade-in"></span>
       </button>
+
 
     </div>
 
@@ -67,21 +69,31 @@
 
     <div id="content">
 
-      <button id="content-spacer" class = "belly">
-        <span id id = "fade-in" = "fade-in"></span>
-      </button>
-
-      <button id="content-left" class = "belly">
-        <span id id = "fade-in" = "fade-in"> login/out </span>
-      </button>
-
-      <button id="content-right" class = "belly">
-        <span id id = "fade-in" = "fade-in"> Biz? </span>
-      </button>
-
-      <button id="content-spacer" class = "belly">
-        <span id id = "fade-in" = "fade-in"></span>
-      </button>
+      <div id = "market-description" class = "belly">
+        <h1 id = "market-title"> Market </h1>
+      </div>
+      <div id = "market-list" class = "belly">
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+        </div>
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+        </div>
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+        </div>
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+        </div>
+      </div>
 
     </div>
 
