--- a/public/index.html
+++ b/public/index.html
@@ -70,29 +70,51 @@
     <div id="content">
 
       <div id = "market-description" class = "belly">
-        <h1 id = "market-title"> Market </h1>
+        <p1 id = "market-title"> Market </p1>
+        <div id = "brief-container">
+          <p1 id = "market-brief">
+            This is a place where businesses have gotten together to sell things for you! Go for it.
+          </p1>
+        </div>
       </div>
       <div id = "market-list" class = "belly">
         <div class = "product">
           <span class = "product-detail" > Fleenis Store</span>
           <span class = "product-detail"> Moose Charm </span>
           <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
         </div>
         <div class = "product">
           <span class = "product-detail" > Fleenis Store</span>
           <span class = "product-detail"> Moose Charm </span>
           <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
         </div>
         <div class = "product">
           <span class = "product-detail" > Fleenis Store</span>
           <span class = "product-detail"> Moose Charm </span>
           <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
         </div>
         <div class = "product">
           <span class = "product-detail" > Fleenis Store</span>
           <span class = "product-detail"> Moose Charm </span>
           <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
         </div>
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
+        </div>
+        <div class = "product">
+          <span class = "product-detail" > Fleenis Store</span>
+          <span class = "product-detail"> Moose Charm </span>
+          <span class = "product-detail"> $12 </span>
+          <span class = "product-detail"> buy </span>
+        </div>
+
       </div>
 
     </div>
