Market elements are more organized now

--- a/public/index.html
+++ b/public/index.html
@@ -70,10 +70,10 @@
     <div id="content">
 
       <div id = "market-description" class = "belly">
-        <p1 id = "market-title"> Market </p1>
         <div id = "brief-container">
+          <p1 id = "market-title"> Market </p1>
           <p1 id = "market-brief">
-            This is a place where businesses have gotten together to sell things for you! Go for it.
+            Buy some jank here.
           </p1>
         </div>
       </div>
