fixed distance for products isn't working great

--- a/public/index.html
+++ b/public/index.html
@@ -78,42 +78,64 @@
         </div>
       </div>
       <div id = "market-list" class = "belly">
+
         <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
+          <div class = "product-detail">
+            <span class = "product-span"> Fleenis Store</span>
+          </div>
+          <div class = "product-detail">
+            <span class = "product-span"> Something else </span>
+          </div>
+          <div class = "product-detail">
+            <span class = "product-span"> moo </span>
+          </div>
+          <div class = "product-detail">
+            <span class = "product-span"> buy</span>
+          </div>
+
+          <div class = "product">
+            <div class = "product-detail">
+              <span class = "product-span"> Fleenis Store</span>
+            </div>
+            <div class = "product-detail">
+              <span class = "product-span"> Something else </span>
+            </div>
+            <div class = "product-detail">
+              <span class = "product-span"> moo </span>
+            </div>
+            <div class = "product-detail">
+              <span class = "product-span"> buy</span>
+            </div>
+
+            <div class = "product">
+              <div class = "product-detail">
+                <span class = "product-span"> Fleenis Store</span>
+              </div>
+              <div class = "product-detail">
+                <span class = "product-span"> Something else </span>
+              </div>
+              <div class = "product-detail">
+                <span class = "product-span"> moo </span>
+              </div>
+              <div class = "product-detail">
+                <span class = "product-span"> buy</span>
+              </div>
+
+              <div class = "product">
+                <div class = "product-detail">
+                  <span class = "product-span"> Fleenis Store</span>
+                </div>
+                <div class = "product-detail">
+                  <span class = "product-span"> Somethingsdfsdfsdf else </span>
+                </div>
+                <div class = "product-detail">
+                  <span class = "product-span"> moo </span>
+                </div>
+                <div class = "product-detail">
+                  <span class = "product-span"> buy</span>
+                </div>
         </div>
-        <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
-        </div>
-        <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
-        </div>
-        <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
-        </div>
-        <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
-        </div>
-        <div class = "product">
-          <span class = "product-detail" > Fleenis Store</span>
-          <span class = "product-detail"> Moose Charm </span>
-          <span class = "product-detail"> $12 </span>
-          <span class = "product-detail"> buy </span>
-        </div>
+
 
       </div>
 
