got a table working beautifully

--- a/public/index.html
+++ b/public/index.html
@@ -77,66 +77,22 @@
           </p1>
         </div>
       </div>
+
       <div id = "market-list" class = "belly">
-
-        <div class = "product">
-          <div class = "product-detail">
-            <span class = "product-span"> Fleenis Store</span>
-          </div>
-          <div class = "product-detail">
-            <span class = "product-span"> Something else </span>
-          </div>
-          <div class = "product-detail">
-            <span class = "product-span"> moo </span>
-          </div>
-          <div class = "product-detail">
-            <span class = "product-span"> buy</span>
-          </div>
-
-          <div class = "product">
-            <div class = "product-detail">
-              <span class = "product-span"> Fleenis Store</span>
-            </div>
-            <div class = "product-detail">
-              <span class = "product-span"> Something else </span>
-            </div>
-            <div class = "product-detail">
-              <span class = "product-span"> moo </span>
-            </div>
-            <div class = "product-detail">
-              <span class = "product-span"> buy</span>
-            </div>
-
-            <div class = "product">
-              <div class = "product-detail">
-                <span class = "product-span"> Fleenis Store</span>
-              </div>
-              <div class = "product-detail">
-                <span class = "product-span"> Something else </span>
-              </div>
-              <div class = "product-detail">
-                <span class = "product-span"> moo </span>
-              </div>
-              <div class = "product-detail">
-                <span class = "product-span"> buy</span>
-              </div>
-
-              <div class = "product">
-                <div class = "product-detail">
-                  <span class = "product-span"> Fleenis Store</span>
-                </div>
-                <div class = "product-detail">
-                  <span class = "product-span"> Somethingsdfsdfsdf else </span>
-                </div>
-                <div class = "product-detail">
-                  <span class = "product-span"> moo </span>
-                </div>
-                <div class = "product-detail">
-                  <span class = "product-span"> buy</span>
-                </div>
-        </div>
-
-
+        <table>
+          <tr>
+            <td>Moose Stuff llc</td>
+            <td>Magic</td>
+            <td>$200</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+          <tr>
+            <td>Smooth Talkers Co.</td>
+            <td>Good Conversation</td>
+            <td>$500</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+        </table>
       </div>
 
     </div>
