--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       <div id = "market-list" class = "belly">
         <table>
           <tr>
-            <td>Moose Stuff llc</td>
+            <td>Moose Stuff Llc</td>
             <td>Magic</td>
             <td>$200</td>
             <td class = "product-detail-last">buy</td>
@@ -90,6 +90,24 @@
             <td>Smooth Talkers Co.</td>
             <td>Good Conversation</td>
             <td>$500</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+          <tr>
+            <td>Wizard Shop</td>
+            <td>Peruvian Darkness</td>
+            <td>*90</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+          <tr>
+            <td> Mega Store</td>
+            <td> Nano USB Cord</td>
+            <td>$12</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+          <tr>
+            <td> Zoom</td>
+            <td> Mythic Videocall Membership</td>
+            <td>$5</td>
             <td class = "product-detail-last">buy</td>
           </tr>
         </table>
