more css cleanup. got rid of .belly class

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 
     <div id="content">
 
-      <div id = "market-description" class = "belly">
+      <div id = "market-description">
         <div id = "brief-container">
           <p1 id = "market-title"> Market </p1>
           <p1 id = "market-brief">
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div id = "market-list" class = "belly">
+      <div id = "market-list">
         <table>
           <tr>
             <td>Moose Stuff Llc</td>
