more css cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,9 @@
 
       <div id = "market-description">
           <p1 id = "market-title"> Market </p1>
-          <p1 id = "market-brief">
-            Buy some jank here.
+          <p1 id = "market-blurb">
+            Buy your junk here. </br>
+            We have the best junk.
           </p1>
       </div>
 
@@ -106,7 +107,7 @@
             <td> Zoom</td>
             <td> Mythic Videocall Membership</td>
             <td>$5</td>
-            <td class = "product-detail-last">buy</td>
+            <td class = "td-last">buy</td>
           </tr>
         </table>
       </div>
