separated position1.css from style1.css

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
     <link async defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
-    <link href = "position1.css" rel = "stylesheet" type = "text/css" />
     <link href = "style1.css" rel = "stylesheet" type = "text/css" />
+    <link href = "position1.css" rel = "stylesheet" type = "text/css" />
     <link href = "animation.css" rel = "stylesheet" type = "text/css" />
   </head>
 
@@ -44,7 +44,7 @@
 
     <div id="banner">
 
-      <button id="spacer" class = "top">
+      <button id="banner-spacer" class = "top">
       </button>
 
       <button id="banner-left" class = "top">
@@ -59,7 +59,7 @@
         <span id = "fade-in"> Biz? </span>
       </button>
 
-      <button id="spacer" class = "top">
+      <button id="banner-spacer" class = "top">
       </button>
 
 
