--- a/public/index.html
+++ b/public/index.html
@@ -68,50 +68,50 @@
 
 
     <div id="content">
+      <div id = "fade-in">
+        <div id = "market-description">
+            <p1 id = "market-title"> Market </p1>
+            <p1 id = "market-blurb">
+              Buy your junk here. </br>
+              (We have the best junk.)
+            </p1>
+        </div>
 
-      <div id = "market-description">
-          <p1 id = "market-title"> Market </p1>
-          <p1 id = "market-blurb">
-            Buy your junk here. </br>
-            We have the best junk.
-          </p1>
+        <div id = "market-list">
+          <table>
+            <tr>
+              <td>Moose Stuff Llc</td>
+              <td>Magic</td>
+              <td>$200</td>
+              <td class = "product-detail-last">buy</td>
+            </tr>
+            <tr>
+              <td>Smooth Talkers Co.</td>
+              <td>Good Conversation</td>
+              <td>$500</td>
+              <td class = "product-detail-last">buy</td>
+            </tr>
+            <tr>
+              <td>Wizard Shop</td>
+              <td>Peruvian Darkness</td>
+              <td>*90</td>
+              <td class = "product-detail-last">buy</td>
+            </tr>
+            <tr>
+              <td> Mega Store</td>
+              <td> Nano USB Cord</td>
+              <td>$12</td>
+              <td class = "product-detail-last">buy</td>
+            </tr>
+            <tr>
+              <td> Zoom</td>
+              <td> Mythic Videocall Membership</td>
+              <td>$5</td>
+              <td class = "td-last">buy</td>
+            </tr>
+          </table>
+        </div>
       </div>
-
-      <div id = "market-list">
-        <table>
-          <tr>
-            <td>Moose Stuff Llc</td>
-            <td>Magic</td>
-            <td>$200</td>
-            <td class = "product-detail-last">buy</td>
-          </tr>
-          <tr>
-            <td>Smooth Talkers Co.</td>
-            <td>Good Conversation</td>
-            <td>$500</td>
-            <td class = "product-detail-last">buy</td>
-          </tr>
-          <tr>
-            <td>Wizard Shop</td>
-            <td>Peruvian Darkness</td>
-            <td>*90</td>
-            <td class = "product-detail-last">buy</td>
-          </tr>
-          <tr>
-            <td> Mega Store</td>
-            <td> Nano USB Cord</td>
-            <td>$12</td>
-            <td class = "product-detail-last">buy</td>
-          </tr>
-          <tr>
-            <td> Zoom</td>
-            <td> Mythic Videocall Membership</td>
-            <td>$5</td>
-            <td class = "td-last">buy</td>
-          </tr>
-        </table>
-      </div>
-
     </div>
 
     <!--
