--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <div id="content">
       <div id = "fade-in">
         <div id = "market-description">
-            <p1 id = "market-title"> Market </p1>
+            <p1 id = "market-title"> Market: </p1>
             <p1 id = "market-blurb">
               Buy your junk here. </br>
               (We have the best junk.)
