--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,13 @@
     <script src="https://js.stripe.com/v3/"></script>
     
     <script defer src="/__/firebase/7.14.4/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/7.14.4/firebase-auth.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-firestore.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-storage.js"></script>
     <script defer src="/__/firebase/7.14.4/firebase-functions.js"></script>
+
     
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
