hooked new css back up with userPersistance and anonLogin, with logout functionality as well

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,6 @@
 
 
 
-
-
   <body>
 
     <div id="banner">
@@ -46,18 +44,24 @@
 
       <button id="banner-left" class = "top">
         <span id = "fade-in">
-          <span id = "login"> loading... </span>
+          <span id = "login" onClick = "anonLogin()"> <!--  #login  -->
+            loading...
+          </span>
         </span>
       </button>
   
-      <button id="banner-middle" class = "top" onclick = "testthing()">
+      <button id="banner-middle" class = "top">
         <span id = "fade-in">
-          <span id = "username" > Hey Elijah! </span>
+          <span id = "username" > Hey Elijah! </span> <!--  #username  -->
         </span>
       </button>
 
       <button id="banner-right" class = "top">
-        <span id = "fade-in"> Are you a business? </span>
+        <span id = "fade-in">
+          <span id = "are-you-biz">
+            Are you a business?  <!--  #are-you-biz  -->
+          </span>
+        </span>
       </button>
 
       <button id="banner-spacer" class = "top">
