added onboardBusiness function too

--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,16 @@
   
       <button id="banner-middle" class = "top">
         <span id = "fade-in">
-          <span id = "username" > Hey Elijah! </span> <!--  #username  -->
+          <span id = "username" >  <!--  #username  -->
+            Hey Elijah!
+          </span>
         </span>
       </button>
 
       <button id="banner-right" class = "top">
         <span id = "fade-in">
-          <span id = "are-you-biz">
-            Are you a business?  <!--  #are-you-biz  -->
+          <span id = "are-you-biz" onClick = "onboardBusiness()"> <!--  #are-you-biz  -->
+            Are you a business? 
           </span>
         </span>
       </button>
@@ -98,7 +100,7 @@
             </tr>
             <tr>
               <td>Wizard Shop</td>
-              <td>Peruvian Darkness</td>
+              <td>Instant Peruvian Darkness</td>
               <td>*90</td>
               <td class = "product-detail-last">buy</td>
             </tr>
