font change plus formatted money

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     
     <!--Load Fonts-->
     <link async defer href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
     <link href = "style1.css" rel = "stylesheet" type = "text/css" />
@@ -89,31 +90,31 @@
             <tr>
               <td>Moose Stuff Llc</td>
               <td>Magic</td>
-              <td>$200</td>
+              <td class = "td-money">$200</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
               <td>Smooth Talkers Co.</td>
               <td>Good Conversation</td>
-              <td>$500</td>
+              <td class = "td-money">$500</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
               <td>Wizard Shop</td>
               <td>Instant Peruvian Darkness</td>
-              <td>*90</td>
+              <td class = "td-money">*90</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
               <td> Mega Store</td>
               <td> Nano USB Cord</td>
-              <td>$12</td>
+              <td class = "td-money">$12</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
               <td> Zoom</td>
               <td> Mythic Videocall Membership</td>
-              <td>$5</td>
+              <td class = "td-money">$5</td>
               <td class = "td-last">buy</td>
             </tr>
           </table>
