deleted old position and style files

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
-    <link href = "style1.css" rel = "stylesheet" type = "text/css" />
-    <link href = "position1.css" rel = "stylesheet" type = "text/css" />
+    <link href = "style.css" rel = "stylesheet" type = "text/css" />
+    <link href = "position.css" rel = "stylesheet" type = "text/css" />
     <link href = "animation.css" rel = "stylesheet" type = "text/css" />
   </head>
 
@@ -88,31 +88,31 @@
         <div id = "market-list">
           <table>
             <tr>
-              <td>Moose Stuff Llc</td>
+              <td class = "td-first">Moose Stuff Llc.</td>
               <td>Magic</td>
               <td class = "td-money">$200</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
-              <td>Smooth Talkers Co.</td>
+              <td class = "td-first" >Smooth Talkers Co.</td>
               <td>Good Conversation</td>
               <td class = "td-money">$500</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
-              <td>Wizard Shop</td>
+              <td class = "td-first">Wizard Shop</td>
               <td>Instant Peruvian Darkness</td>
               <td class = "td-money">*90</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
-              <td> Mega Store</td>
+              <td class = "td-first"> Mega Store</td>
               <td> Nano USB Cord</td>
               <td class = "td-money">$12</td>
               <td class = "product-detail-last">buy</td>
             </tr>
             <tr>
-              <td> Zoom</td>
+              <td class = "td-first"> Zoom</td>
               <td> Mythic Videocall Membership</td>
               <td class = "td-money">$5</td>
               <td class = "td-last">buy</td>
@@ -121,24 +121,6 @@
         </div>
       </div>
     </div>
-
-    <!--
-    <button id="banner-login" class = "top" onclick = "anonLogin()">
-      <span id = "fade-in"> loading... </span>
-    </button>
-
-    <button id="banner-profile" class = "top" onclick = "anonLogin()">
-      <span id = "fade-in"> loading... </span>
-    </button>
-
-    <button id = "business-logout" class = "top" onclick = "logOut()">
-      <span id = "fade-in"> Not you? Log Out </span>
-    </button>
-
-    <a id = "business-login" class = "top" onClick = "onboardBusiness()">
-      <span id = "fade-in"> Put your Biz in the Market </span>
-    </a>
-            -->
 
     <script src = "/app.js">
     </script>
