--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
 
     <!--CSS LINKS-->
-    <link href = "style.css" rel = "stylesheet" type = "text/css" />
-    <link href = "position.css" rel = "stylesheet" type = "text/css" />
-    <link href = "animation.css" rel = "stylesheet" type = "text/css" />
+    <link href = "css/style.css" rel = "stylesheet" type = "text/css" />
+    <link href = "css/position.css" rel = "stylesheet" type = "text/css" />
+    <link href = "css/animation.css" rel = "stylesheet" type = "text/css" />
   </head>
 
 
