added stripe ID to the biz.html page

--- a/public/biz.html
+++ b/public/biz.html
@@ -41,7 +41,7 @@
 
       <button id="banner-left" class = "top">
         <span id = "fade-in">
-          <a href = "/"> go back </a>
+          <a href = "/"> back </a>
         </span>
       </button>
   
@@ -64,6 +64,11 @@
       <button id="banner-spacer" class = "top">
       </button>
 
+    </div>
+    <div id="content">
+      <a id = "stripe-ID">
+        <span id = "fade-in"> Your Stripe ID is: loading... </span>
+      </a>
     </div>
 
 
