formatted stripe ID on biz page

--- a/public/biz.html
+++ b/public/biz.html
@@ -34,6 +34,7 @@
 
    <body>
 
+    <!-- ####### BANNER ####### -->
     <div id="banner">
 
       <button id="banner-spacer" class = "top">
@@ -65,25 +66,22 @@
       </button>
 
     </div>
+
+
+
+    <!-- ####### CONTENT ####### -->
     <div id="content">
-      <a id = "stripe-ID">
-        <span id = "fade-in"> Your Stripe ID is: loading... </span>
-      </a>
+
+      <div id = "fade-in">
+        <div id = "biz-bio">
+            <p1 id = "biz-name"> Stripe ID: </p1>
+            <p id = "stripe-ID">
+              loading...
+            </p>
+        </div>
     </div>
 
-
     <!--
-    <button id="banner-login" class = "top" onclick = "anonLogin()">
-      <span id = "fade-in"> loading... </span>
-    </button>
-
-    <button id = "business-logout" class = "top" onclick = "logOut()">
-      <span id = "fade-in"> Not you? Log Out </span>
-    </button>
-
-    <a id = "stripe-ID">
-        <span id = "fade-in"> Your Stripe ID is: loading... </span>
-      </a>
 
     <input onchange = "updatePost(event)">
         <a href = "index.html"> Go to back </a>
