added padding to biz-bio

--- a/public/biz.html
+++ b/public/biz.html
@@ -74,11 +74,23 @@
 
       <div id = "fade-in">
         <div id = "biz-bio">
-            <p1 id = "biz-name"> Stripe ID: </p1>
-            <p id = "stripe-ID">
-              loading...
-            </p>
+          <p1 id = "biz-name"> Stripe ID: </p1>
+          <p id = "stripe-ID"> loading... </p>
         </div>
+      </div>
+
+      <div id = "market-list">
+        <table>
+          <tr>
+            <td class = "td-first">Moose Stuff Llc.</td>
+            <td>Magic</td>
+            <td class = "td-money">$200</td>
+            <td class = "product-detail-last">buy</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
     </div>
 
     <!--
